Fixed error in template

--- a/interface/jade/page_account.jade
+++ b/interface/jade/page_account.jade
@@ -109,7 +109,7 @@ body
                                                 a.block.i-close.sprite.sprite-i-close.fright(href='/logout/twitter/')
                                             else
                                                 a(href='/login/twitter/', title='')
-                                                    img(src=img_url+i-tw.png', alt='')
+                                                    img(src=img_url+'i-tw.png', alt='')
                                                     span Привязать
                                         li
                                             if user.social.vk
