Вьюха и шаблоны для feed.

--- a/templates/base_feed.html
+++ b/templates/base_feed.html
@@ -1,12 +1,12 @@
 <rss version="2.0">
 <channel>
 <title>Все Видео - новинки</title>
-<link>http://vsevi.ru&lt;/link>
+<link>http://vsevi.ru </link>
 <description>агрегатор всех онлайн-кинотеатров — Все видео: онлайн просмотр глобальный видео-архив фильмов, сериалов, видео-трансляций, ТВ</description>
 <language>ru-ru</language>
-<pubDate>{дата генерации}</pubDate>
+<pubDate>{{ date }}</pubDate>
 
-    <lastBuildDate>{дата генерации]</lastBuildDate>
+    <lastBuildDate>Дата генерации {{ date }}</lastBuildDate>
     <generator>VseVi rss robot</generator>
     <managingEditor>info@vsevi.ru</managingEditor>
     <webMaster></webMaster>
