--- a/templates/tw_feed.html
+++ b/templates/tw_feed.html
@@ -1,17 +1,17 @@
 {% extends "base_feed.html" %}
         {% block feeditems %}
-            {% for film in items %}
+            {% for film in films %}
                   <title>{{film.name}}</title>
                   <link>http://vsevi.ru/films/{{film.id}} </link>
                   <description>Новый #фильм {{ film.name }}
-                      {% for ganre in film.genre%}
-                          #{{ganre}}
+                      {% for ganre in film.genres.all %}
+                          #{{ganre.name}}
                       {% endfor %}
-                          звезды: {{film.rating}}, {{film.year}} http://vsevi.ru/films/{{film.id}}</description>
+                          звезды: {{film.rating_cons}}/10, {{film.release_date}} http://vsevi.ru/films/{{film.id}}</description>
                   <pubDate>
-                      {% with total=film.id %}
-                          {{ newdate.total }}
-                      {% endwith %}
+{#                      {% with total=film.id %}#}
+{#                          {{ newdate.total }}#}
+{#                      {% endwith %}#}
                   </pubDate>
                   <guid>http://vsevi.ru/films/{{film.id}}</guid>
             {% endfor %}
