--- a/templates/vk_feed.html
+++ b/templates/vk_feed.html
@@ -1,14 +1,18 @@
 {% extends "base_feed.html" %}
         {% block feeditems %}
-            {% for film in films %}
+            {% for film, actors, directors, poster, trailer in films %}
                   <title>{{film.name}}</title>
-                  <link>http://vsevi.ru/films/{{film.id}} </link>
-                  <description>Новинка в кинотеатре "Все видео": Фильм "{{ film.name }}"({{ film.name_orig }}, {{name.release_date}})
+                  <link>{{ trailer }} </link>
+                  <description><img src="{{poster}}}">Новинка в кинотеатре "Все видео": Фильм "{{ film.name }}"({{ film.name_orig }}, {{name.release_date}})
                       Оценка: {{ film.rating_cons}}/10
                       Смотреть: http://vsevi.ru/films/{{film.id}}
                       В ролях:
-                      {% for person in film.persons.all %}
-                          {{ person.name }},
+                      {% for actor in actors%}
+                          {{ actor }},
+                      {% endfor %}
+                      Режиссер:
+                      {% for director in directors%}
+                      {{ director }},
                       {% endfor %}
                       Жанр:
                       {% for ganre in film.genres.all %}
