Поправил rss для twitter

--- a/templates/base_feed.html
+++ b/templates/base_feed.html
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <rss version="2.0">
 <channel>
 <title>Все Видео - новинки</title>
@@ -6,10 +7,10 @@
 <language>ru-ru</language>
 <pubDate>{{ date }}</pubDate>
 
-    <lastBuildDate>Дата генерации {{ date }}</lastBuildDate>
+    <lastBuildDate>{{ date }}</lastBuildDate>
     <generator>VseVi rss robot</generator>
     <managingEditor>info@vsevi.ru</managingEditor>
-    <webMaster></webMaster>
+    <webMaster>info@vsevi.ru</webMaster>
         {% block feeditems %}
 
         {% endblock %}
