--- a/templates/tw_feed.html
+++ b/templates/tw_feed.html
@@ -1,18 +1,15 @@
 {% extends "base_feed.html" %}
         {% block feeditems %}
             {% for film in films %}
+                <item>
                   <title>{{film.name}}</title>
                   <link>http://vsevi.ru/films/{{film.id}} </link>
-                  <description>Новый #фильм {{ film.name }}
-                      {% for ganre in film.genres.all %}
-                          #{{ganre.name}}
-                      {% endfor %}
-                          звезды: {{film.rating_cons}}/10, {{film.release_date}} http://vsevi.ru/films/{{film.id}}</description>
+                  <description>Новый #фильм {{ film.name }}{% for ganre in film.genres.all %} #{{ganre.name}}{% endfor %} {{film.rating_cons}}/10, {{film.release_date.year}} http://vsevi.ru/films/{{film.id}}
+                  </description>
                   <pubDate>
-{#                      {% with total=film.id %}#}
-{#                          {{ newdate.total }}#}
-{#                      {% endwith %}#}
+                    {{ date }}
                   </pubDate>
                   <guid>http://vsevi.ru/films/{{film.id}}</guid>
+                </item>
             {% endfor %}
         {% endblock %}
