--- a/templates/vk_feed.html
+++ b/templates/vk_feed.html
@@ -5,24 +5,17 @@
                   <title>{{film.name}}</title>
                   <link>{{ trailer }} </link>
                   <enclosure url="{{ poster }}" type="image/jpeg"/>
-                  <description>Новинка в кинотеатре "Все видео": Фильм "{{ film.name }}"({{ film.name_orig }}, {{name.release_date}})
-                      Оценка: {{ film.rating_cons}}/10
+                  <description>Новинка в кинотеатре "Все видео": Фильм "{{ film.name }}"({{ film.name_orig }}, {{name.release_date.year}})
+                      Сводный рейтинг: {{ film.rating_cons}}/10
                       Смотреть: http://vsevi.ru/film/{{film.id}}
-                      В ролях:
-                      {% for actor in actors%}
-                          {{ actor }},
-                      {% endfor %}
-                      Режиссер:
-                      {% for director in directors%}
-                      {{ director }},
-                      {% endfor %}
-                      Жанр:
-                      {% for ganre in film.genres.all %}
-                          #{{ganre.name}}
-                      {% endfor %}
-                          звезды: {{film.rating_cons}}/10, {{film.release_date}} http://vsevi.ru/film/{{film.id}}</description>
+                      Стоимость:{{ cost }}
+                      В ролях: {{ actors }}
+                      Жанр: {% for ganre in film.genres.all %} #{{ganre.name}} {% endfor %}
+                      Режиссер: {{ directors }}
+                     {{film.description}} http://vsevi.ru/film/{{film.id}}
+                  </description>
                   <pubDate>
-                       {{ date }}
+                    {{date }}
                   </pubDate>
                   <guid>http://vsevi.ru/film/{{film.id}}</guid>
                 </item>
