--- a/templates/feed.html
+++ b/templates/feed.html
@@ -7,10 +7,10 @@
                   <enclosure url="{{ poster }}" type="image/jpeg"/>
                   <description>
                     Сводный рейтинг: {{ film.rating_cons}}/10
-                    В ролях: {% for actor in actors%}{{ actor }}, {% endfor %}
-                    Режиссер: {% for director in directors%}{{ director }}, {% endfor %}. Сценарист: {% for scriptwriter in scriptwriters%}{{ scriptwriter}}{% endfor %}
-                    Жанр: {% for ganre in film.genres.all %} {{ganre.name}}, {% endfor %}
-                    Стоимость: {{ cost }}
+                    В ролях: {{actors}}.
+                    Режиссер: {{ directors }} Сценарист: {{ scriptwriter}}.
+                    Жанр: {% for ganre in film.genres.all %} {{ganre.name}},{% endfor %}
+                    Стоимость: {{ cost }}.
                     {{ film.description }}
                 </description>
                   <pubDate>
