исправлена работа кнопки удаления фильма из плейлиста на странице плейлиста.

--- a/interface/jade/page_playlist.jade
+++ b/interface/jade/page_playlist.jade
@@ -52,7 +52,7 @@ body
                                             span=film.name_orig
                                 .col-md-4.col-sm-5
                                     .range-block-playlist.cf
-                                        a.sprite.sprite-go-view.block.fright(href='#', title='')#playlist_btn
+                                        a.sprite.sprite-stop-view.block.fright(href='#', title='')#playlist_btn
                                         .range-style2.fright
                                             .rateit(data-rateit-max=10,data-rateit-step=1,data-rateit-resetable=1,data-rateit-value=(film.relation && film.relation.rating)?film.relation.rating:0)#rateit
                                         //
