--- a/templates/feed.html
+++ b/templates/feed.html
@@ -6,12 +6,12 @@
                   <link>http://vsevi.ru/film/{{film.id}} </link>
                   <enclosure url="{{ poster }}" type="image/jpeg"/>
                   <description>
-                    Сводный рейтинг: {{ film.rating_cons}}/10
+                    <![CDATA[Сводный рейтинг: {{ film.rating_cons}}/10
                     В ролях: {{actors}}.
                     Режиссер: {{ directors }} Сценарист: {{ scriptwriter}}.
                     Жанр: {% for ganre in film.genres.all %} {{ganre.name}},{% endfor %}
                     Стоимость: {{ cost }}.
-                    {{ film.description }}
+                    {{ film.description }}]]>
                 </description>
                   <pubDate>
                     {{ date }}
