--- a/templates/vk_feed.html
+++ b/templates/vk_feed.html
@@ -5,14 +5,14 @@
                   <title>{{film.name}}</title>
                   <link>{{ trailer }} </link>
                   <enclosure url="{{ poster }}" type="image/jpeg"/>
-                  <description>Новинка в кинотеатре "Все видео": Фильм "{{ film.name }}"({{ film.name_orig }}, год: {{film.release_date.year}})
+                  <description><![CDATA[Новинка в кинотеатре "Все видео": Фильм "{{ film.name }}"({{ film.name_orig }}, год: {{film.release_date.year}})
                       Сводный рейтинг: {{ film.rating_cons}}/10
                       Смотреть: http://vsevi.ru/film/{{film.id}}
                       Стоимость:{{ cost }}
                       В ролях: {{ actors }}
                       Жанр: {% for ganre in film.genres.all %}#{{ganre.name}} {% endfor %}
                       Режиссер: {{ directors }}
-                     {{film.description}} http://vsevi.ru/film/{{film.id}}
+                     {{film.description}} http://vsevi.ru/film/{{film.id}}]]>
                   </description>
                   <pubDate>
                     {{date }}
