--- a/interface/jade/header.jade
+++ b/interface/jade/header.jade
@@ -68,7 +68,7 @@ header(role='banner')
                                 br
                                 | Плейлист
                         li
-                            a(href='/feed', title='',data-toggle=auth_modal, data-target='#reg-enter', data-remote="false")
+                            a(href='/stream', title='',data-toggle=auth_modal, data-target='#reg-enter', data-remote="false")
                                 i.sprite.sprite-i-tape
                                 br
                                 | Лента
